<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <Button
            android:id="@+id/clear"
            android:layout_width="164dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="150dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="150dp"
            android:text="@string/num_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_9"
            app:layout_constraintBottom_toTopOf="@+id/clear"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_8"
            app:layout_constraintBottom_toTopOf="@+id/clear"
            app:layout_constraintEnd_toStartOf="@+id/button_9" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_7"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_8" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_6"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_5"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_6" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_4"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_5" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_3"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_2"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_3" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/num_1"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_2" />

        <TextView
            android:id="@+id/price_text"
            style="@style/text_style"
            android:layout_marginStart="25dp"
            android:layout_marginTop="128dp"
            android:text="@string/price_text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:text="@string/price_text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_text" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price_text9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


</androidx.constraintlayout.widget.ConstraintLayout>

